--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
- 
+ <style>
+  html{margin: 0;
+  padding: 0;}
+#app{
+  margin: 0;
+}body{
+  margin: 0;
+}
+ </style>
   </head>
   <body>
     <noscript>
